# PeakRankR

./: .gitignore  .zenodo.json  Astrocytes-1.bw  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESCRIPTION  NAMESPACE  NEWS.md  README.md  bw_table  paper.bib  paper.md  pyproject.toml  summary.py  test_file.tsv
.github/workflows/: paper.yml  tests.yml
R/: PeakRankR-package.R  PeakRankR.R  PeakRankeR.R  Peak_MACS2_rank.R  Peak_RankR.R  Peak_coverage_prop_rank.R  Peak_coverage_rank.R  Peak_intersect_rank.R  Peak_magnitude_rank.R  check_bedtools.R  multiBigwig_summary_SS.R  utils.R
inst/extdata/: Astrocytes-2.bw  bw_table.txt  test_file.tsv
man/: PeakRankeR.Rd  Peak_MACS2_rank.Rd  Peak_RankR.Rd  Peak_RankeR.Rd  Peak_coverage.Rd  Peak_coverage_rank.Rd  Peak_intersect.Rd  Peak_intersect_rank.Rd  Peak_magnitude_rank.Rd  grList_to_df.Rd  multiBigwig_summary_SS.Rd  peak_annotation_rank.Rd  process_bigwig_pipeline.Rd  range01.Rd
paper/: paper.bib  paper.md
src/pypeakranker/: __init__.py  _utils.py  cli.py  gc.py  moments.py  phylop.py  rank.py  summary.py
tests/: test.bed  test_cli.py  test_gc.py  test_moments.py  test_rank.py  test_smoke.py  test_utils.py  testthat.R
tests/testthat/: test-Peak_RankR.R
vignettes/: getting-started.Rmd
